--- a/pages/maintenance/maintenance.scss
+++ b/pages/maintenance/maintenance.scss
@@ -8,6 +8,6 @@ h1{
 .animation-container{
     width: 100vw;
     height: 100vh;
-    background-color: #444444;
+    background-color: var(----background-color);
     padding: 5rem;
 }
