--- a/components/navbar/navbar.scss
+++ b/components/navbar/navbar.scss
@@ -38,7 +38,7 @@
             a:hover,
             a:active,
             a:focus{
-                color: var(--black);
+                color: var(--white);
                 font-weight: 500;
             }
         }
@@ -48,10 +48,9 @@
         flex: 3;
         display: flex;
         justify-content: end;
-        gap: 2rem;
         
         button {
-            margin-right: 2rem;
+            margin-right: 5rem;
             border-radius: .5rem;
             border: 0;
             width: 6rem;
