--- a/pages/home/home.scss
+++ b/pages/home/home.scss
@@ -2,17 +2,20 @@
 
 .home-container{
     height: 100vh;
+    width: 100vw;
 
     .profile{
+        width: 100vw;
         height: 90vh;
         display: flex;
         justify-content: center;
         align-items: center;
 
         .name-container{
-            margin-inline: 3rem;
             display: flex;
             flex-direction: column;
+            justify-content: center;
+            margin-inline: 3rem;
 
             .intro{
                 font-size: 2rem;
@@ -49,13 +52,14 @@
 
         .photo-container{
             height: 100%;
+            min-width: 30vw;
             display: flex;
             justify-content: center;
             align-items: end;
             margin-inline: 3rem;
 
             div{
-                width: 30vw;
+                min-width: 28rem;
                 height: 90%;
                 background-image: url(../../images/profile-red.png);
                 background-position: top;
