fix: remove side scrolling caused by navbar

--- a/components/navbar/navbar.scss
+++ b/components/navbar/navbar.scss
@@ -21,6 +21,7 @@
         align-items: center;
 
         ul{
+            width: 30rem;
             gap: 3rem;
             display: flex;
             justify-content: center;
