--- a/pages/home/home.scss
+++ b/pages/home/home.scss
@@ -1,13 +1,16 @@
 @import url(../../src/main.scss);
 
+section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .home-container{
     height: 100vh;
 
     .profile{
         height: 90vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
 
         .name-container{
             display: flex;
@@ -72,5 +75,100 @@
         width: 100%;
         height: 100vh;
         background-color: var(--container-bg-color);
+
+        .intro-wrapper{
+            width: 50vw;
+
+            h1{
+                font-family: var(--main-font);
+                font-weight: 500;
+                color: var(--white);
+                text-align: center;
+                margin-bottom: 4rem;
+            }
+            p{
+                font-weight: 200;
+                line-height: 3rem;
+                text-align: center;
+            }
+        }
+    }
+
+    .highlights-container{
+        width: 100%;
+        height: 100vh;
+
+        .highlights-wrapper{
+
+            h1{
+                font-family: var(--main-font);
+                font-weight: 500;
+                color: var(--white);
+                text-align: center;
+                margin-bottom: 4rem;
+            }
+
+            .highlight-card{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 4rem;
+
+                .card-wrapper{
+                    width: 30rem;
+                    height: 30rem;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    .card{
+                        width: 18rem;
+                        height: 23rem;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        flex-direction: column;
+                        background-color: var(--container-bg-color);
+                        transition: 300ms;
+                        
+                        .icon-div{
+                            width: 10rem;
+                            height: 10rem;
+                            background-color: red;
+                            border-radius: 50%;
+                            margin-block: 2rem;
+                        }
+
+                        h2{
+                            text-align: center;
+                        }
+
+                        p{
+                            color: var(--primary-color);
+                            margin-block: 1rem;
+                        }
+                    }
+
+                    .card:hover{
+                        box-shadow: 0px 0px 50px rgb(172, 172, 172);
+                    }
+                }
+            }
+        }
+    }
+
+    .contacts-container{
+        width: 100%;
+        height: 100vh;
+
+        .contacts-wrapper{
+            h1{
+                font-family: var(--main-font);
+                font-weight: 500;
+                color: var(--white);
+                text-align: center;
+                margin-bottom: 4rem;
+            }
+        }
     }
 }
