feat: added 3d animation in highlight cards

--- a/src/main.scss
+++ b/src/main.scss
@@ -14,7 +14,7 @@
     --paragraph-font-weight: 300;
     --paragraph-hilight-weight: 500;
 
-    --background-color: #2D2D2D;
+    --background-color: #353535;
     --container-bg-color: #232323;
     --primary-color: #E20026;
     --font-color: #000;
