--- a/components/navbar/navbar.scss
+++ b/components/navbar/navbar.scss
@@ -1,12 +1,14 @@
 @import url(../../src/main.scss);
 
 .navbar-container{
+    width: 100%;
     height: 5rem;
     display: flex;
     justify-content: start;
     align-items: center;
     padding-inline: 3rem;
     gap: 2rem;
+    position: absolute;
 
     img{
         height: 3rem;
