--- a/pages/home/home.scss
+++ b/pages/home/home.scss
@@ -11,13 +11,17 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
+    scroll-snap-align: start;
 }
 
 .home-container{
+    scroll-snap-type: y mandatory;
     height: 100vh;
+    overflow-y: scroll;
+    position: relative;
 
     .profile{
-        height: 90vh;
+        height: 100vh;
 
         .name-container{
             display: flex;
@@ -98,7 +102,6 @@ section{
     }
 
     .highlights-container{
-        width: 100%;
         height: 100vh;
 
         .highlights-wrapper{
@@ -115,46 +118,66 @@ section{
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                gap: 4rem;
+                gap: 3rem;
 
                 .card-wrapper{
-                    width: 30rem;
+                    width: 25vw;
                     height: 30rem;
                     display: flex;
                     justify-content: center;
                     align-items: center;
+                    perspective: 1000px;
 
                     .card{
                         width: 18rem;
                         height: 23rem;
                         display: flex;
-                        justify-content: space-between;
+                        justify-content: space-around;
                         align-items: center;
                         flex-direction: column;
                         background-color: var(--container-bg-color);
                         transition: 300ms;
+                        border-radius: 2rem;
+                        transform-style: preserve-3d;
+                        position: relative;
+                        box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.5);
                         
                         .icon-div{
+                            position: absolute;
+                            top: 2rem;
                             width: 10rem;
                             height: 10rem;
                             background-color: red;
                             border-radius: 50%;
-                            margin-block: 2rem;
+                        }
+
+                        img{
+                            margin-top: 4rem;
+                            width: 5rem;
+                            z-index: 1;
+                            transition: 300ms;
                         }
 
                         h2{
+                            margin-top: 3rem;
                             text-align: center;
+                            transition: 300ms;
                         }
 
                         p{
                             color: var(--primary-color);
                             margin-block: 1rem;
+                            transition: 300ms;
+                        }
+
+                        a{
+                            transition: 300ms;
                         }
                     }
 
-                    .card:hover{
-                        box-shadow: 0px 0px 50px rgb(172, 172, 172);
-                    }
+                    // .card:hover{
+                    //     box-shadow: 0px 0px 50px rgb(172, 172, 172);
+                    // }
                 }
             }
         }
