--- a/src/main.scss
+++ b/src/main.scss
@@ -53,11 +53,16 @@ body{
 
 p{
     margin-bottom: 0;
+    font-size: var(--font-size-base);
     
 }
 
 h1, h2, h3, h4, h5, h6{
     margin-bottom: 0;
+}
+
+h1{
+    font-size: var(--font-size-xl);
 }
 
 ul {
