--- a/pages/home/home.scss
+++ b/pages/home/home.scss
@@ -9,14 +9,16 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
-    scroll-snap-align: start;
 }
 
 .home-container{
-    scroll-snap-type: y mandatory;
     height: 100vh;
     overflow-y: scroll;
     position: relative;
+
+    .navbar-container{
+        position: absolute;
+    }
 
     .profile{
         height: 100vh;
